deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-nginx-4077
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress-nginx-4077
  strategy:
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: ingress-nginx-4077
    spec:
      containers:
        - name: nginx
          image: nginx:1.15
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 1
            timeoutSeconds: 1
            failureThreshold: 3
