service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-4077
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: ingress-nginx-4077
