ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-nginx-4077
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-next-upstream: "error timeout http_502"
spec:
  rules:
    - host: ingress-nginx-4077
      http:
        paths:
          - backend:
              serviceName: ingress-nginx-4077
              servicePort: 80
